--- a/style.css
+++ b/style.css
@@ -9,29 +9,22 @@ body{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+	animation:loading1 2s infinite;
 }
-.loading2{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+@keyframes loading1 {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);margin-left:-20px;}
+	40% {transform: translateY(-5px);}
+	60% {transform: translateY(-5px);}
 }
+
 .line1{
 	width:40px;
 	height: 5px;
 	border-radius: 10px;
 	background: white;
-	animation:loading1 2s infinite;
+	animation:line1 2s infinite;
 }
-.line2{
-	width:40px;
-	height: 5px;
-	border-radius: 10px;
-	margin-top: 20px;
-	background: white;
-	animation: loading2 2s infinite;
-}
-@keyframes loading1{
+@keyframes line1{
 	0%{
 		transform: rotate(0deg);
 	}
@@ -42,7 +35,28 @@ body{
 		transform: rotate(0deg);
 	}
 }
-@keyframes loading2{
+
+.loading2{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	animation:loading2 2s infinite;
+}
+@keyframes loading2 {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);margin-left:-20px;}
+	40% {transform: translateY(-5px);}
+	60% {transform: translateY(-5px);}
+}
+.line2{
+	width:40px;
+	height: 5px;
+	border-radius: 10px;
+	margin-top: 15px;
+	background: white;
+	animation: line2 2s infinite;
+}
+@keyframes line2{
 	0%{
 		transform: rotate(0deg);
 	}
@@ -54,12 +68,11 @@ body{
 		transform: rotate(0deg);
 	}
 }
-
 .menutext{
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin-top: 26px;
+	margin-top: 37.5px;
 	transform: translate(-50%,-50%);
 }
 .line3{
@@ -70,14 +83,18 @@ body{
 	opacity: 100;
 }
 @keyframes menutext{
-	0%{
+	0%,20%, 50%, 80%, 100%{
 		margin-top:0px;
+		transform: translateY(0);
 	}
 	50%{
 		opacity: 0;
-		margin-top: 10px;
+		margin-top: 25px;
+		transform: translateY(-15px);
 	}
-	100%{
-		margin-top:0px;
+	60% {
+		transform: translateY(-15px);
 	}
 }
+
+	
